# Trippy

./: .eslintrc.js  .gitignore  .prettierignore  README.md  package.json  tsconfig.json  vue.config.js
native/: Cargo.toml  package.json
public/: index.html
src/: App.vue  background.ts  main.ts
src/components/: HelloWorld.vue
src/plugins/: vuetify.ts
src/router/: index.ts
src/views/: About.vue  Home.vue  Settings.vue  Songs.vue
