[package]
name = "trippy"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "trippy"
crate-type = ["cdylib"]

[dependencies]
neon = "0.3.3"

[build-dependencies]
neon-build = "0.3.3"
